bg fix overflow

--- a/src/routes/Root.css
+++ b/src/routes/Root.css
@@ -25,7 +25,6 @@ h3 {
 
 #bg {
   height: 100vh;
-  overflow-y: scroll;
   overflow-x: hidden;
   background: rgb(24, 24, 26);
   background: linear-gradient(
